# capi-crypto-wrappers

./: Cargo.toml  README.md  _build.ts  deno.jsonc  lib.node.ts  lib.ts  mod.ts  sr25519.ts  wasm.ts  words.txt
lib/: capi_crypto_wrappers.generated.js
lib/async/: capi_crypto_wrappers.generated.js
lib/fetch/: capi_crypto_wrappers.generated.js  capi_crypto_wrappers_bg.wasm
lib/sync/: capi_crypto_wrappers.generated.js
src/: lib.rs
