[package]
name = "capi-crypto-wrappers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.83"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.3", features = ["js"] }
rand = { version="0.7.3", default-features = false, features = ["wasm-bindgen"] }
ed25519-zebra = { version = "3.1.0", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["static-context"] }
